--- a/src/main/webapp/web.xml
+++ b/src/main/webapp/web.xml
@@ -20,5 +20,10 @@
         <url-pattern></url-pattern>
     </servlet-mapping>
 
+    <error-page>
+        <error-code>404</error-code>
+        <location>/pages/shared/error.jsp</location>
+    </error-page>
+
 </web-app>
 
