--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
+# ===============================
+# DATABASE
+# ===============================
 
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GUITARSHOP
+spring.datasource.username=user1
+spring.datasource.password=123456
+
+
+
+# ===============================
+# JPA / HIBERNATE
+# ===============================
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql = true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+
+spring.h2.console.enabled=true
