--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.error.whitelabel.enabled=false
 # ===============================
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=GUITARSHOP
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database=GUITARSHOP
 spring.datasource.username=user1
 spring.datasource.password=123456
 
