--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
 
 spring.h2.console.enabled=true
+
+spring.queries.users-query=SELECT Email, Password FROM [dbo].[USER] WHERE Email=?
+spring.queries.roles-query=SELECT u.Email, r.Role_Name FROM [dbo].[USER] u INNER JOIN USER_ROLE ur ON(u.Id=ur.User_Id) INNER JOIN ROLE r ON(ur.Role_Id=r.Role_Id) WHERE u.Email=?
