--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.error.whitelabel.enabled=false
 # DATABASE
 # ===============================
 
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost:1433;database=GUITARSHOP
-spring.datasource.username=user1
-spring.datasource.password=123456
+spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost:1433;database = GUITARSHOPJEE
+spring.datasource.username = user1
+spring.datasource.password = 123456
 
 # ===============================
 # JPA / HIBERNATE
@@ -15,11 +15,13 @@ spring.datasource.password=123456
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate5.SpringSessionContext
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServerDialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.current_session_context_class = org.springframework.orm.hibernate5.SpringSessionContext
 
-spring.h2.console.enabled=true
+spring.h2.console.enabled = true
 
-spring.queries.users-query=SELECT Email, Password FROM [dbo].[USER] WHERE Email=?
-spring.queries.roles-query=SELECT u.Email, r.Role_Name FROM [dbo].[USER] u INNER JOIN USER_ROLE ur ON(u.Id=ur.User_Id) INNER JOIN ROLE r ON(ur.Role_Id=r.Role_Id) WHERE u.Email=?
+spring.queries.users-query = SELECT Email, Password, 1 FROM PERSON WHERE Email=?
+spring.queries.roles-query = SELECT p.Email, r.Role_Name, 1 FROM PERSON p INNER JOIN PERSON_ROLE pr ON (p.Person_Id=pr.Person_Id) INNER JOIN ROLE r ON(pr.Role_Id=r.Role_Id) WHERE p.Email=?
+
+spring.datasource.initialization-mode=always
