--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,12 @@
             <artifactId>spring-security-config</artifactId>
             <version>5.1.5.RELEASE</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.thymeleaf.extras/thymeleaf-extras-springsecurity5 -->
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+            <version>3.0.4.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
